--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,8 @@ body{
 	margin: 0px;
 	font-family: Dosis;
 	font-size: 17px;
+	overflow: hidden;
+	background-color: black;
 }
 
 a{
@@ -12,45 +14,230 @@ a:hover{
 	text-decoration: underline;
 }
 
+#video{
+	position: absolute;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .title{
 	font-size: 26px;
 }
 
-.msg{
-	font-size: 26px;
-	color: #BDBDBD;
-}
-
 .info{
+	position: absolute;
 	font-size: 25px;
-}
-
-.main{
-	margin-top: 60px;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-}
-
-.top{
-	text-align: center;
-	padding-top: 10px;
-}
-
-.result{
-	width: 460px;
-	text-align: center;
-	margin: auto;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.shadow{
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-	box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+	z-index: 1000;
 }
 
 .loading{
 	vertical-align: middle;
+}
+
+
+
+
+
+
+/* Slider */
+.wrap {
+	position: relative;
+	z-index: 1000;
+	opacity: 0.3;
+	transition: opacity .5s ease-out;
+    -moz-transition: opacity .5s ease-out;
+    -webkit-transition: opacity .5s ease-out;
+    -o-transition: opacity .5s ease-out;
+}
+
+.wrap:hover{
+	opacity: 1;
+}
+
+/* Frame */
+.frame {
+	height: 230px;
+	line-height: 230px;
+	overflow: hidden;
+}
+.frame ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+.frame ul li img{
+	width: 150px;
+	height: 150px;
+	transition: all .2s ease-in-out;
+}
+.frame ul li {
+	float: left;
+	width: 150px;
+	height: 290px;
+	margin-top: 33px;
+	padding: 0;
+	text-align: center;
+	cursor: pointer;
+	z-index: 0;
+}
+.frame ul li.active img {
+	-webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.75);
+	-webkit-transform: scale(1.2); 
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+	z-index: 10000;
+}
+
+/* Scrollbar */
+.scrollbar {
+	margin: 0 0 1em 0;
+	height: 2px;
+	background: #ccc;
+	line-height: 0;
+}
+.scrollbar .handle {
+	width: 100px;
+	height: 100%;
+	background: #292a33;
+	cursor: pointer;
+}
+.scrollbar .handle .mousearea {
+	position: absolute;
+	top: -9px;
+	left: 0;
+	width: 100%;
+	height: 20px;
+}
+
+/* Pages */
+.pages {
+	list-style: none;
+	margin: 20px 0;
+	padding: 0;
+	text-align: center;
+}
+.pages li {
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	margin: 0 4px;
+	text-indent: -999px;
+	border-radius: 10px;
+	cursor: pointer;
+	overflow: hidden;
+	background: #fff;
+	box-shadow: inset 0 0 0 1px rgba(0,0,0,.2);
+}
+.pages li:hover {
+	background: #aaa;
+}
+.pages li.active {
+	background: #666;
+}
+
+/* Controls */
+.controls { margin: 25px 0; text-align: center; }
+
+/* One Item Per Frame example*/
+.oneperframe { height: 300px; line-height: 300px; }
+.oneperframe ul li { width: 1140px; }
+.oneperframe ul li.active { background: #333; }
+
+/* Crazy example */
+.crazy ul li:nth-child(2n) { width: 100px; margin: 0 4px 0 20px; }
+.crazy ul li:nth-child(3n) { width: 300px; margin: 0 10px 0 5px; }
+.crazy ul li:nth-child(4n) { width: 400px; margin: 0 30px 0 2px; }
+
+
+
+
+#logo{
+	position: fixed;
+	bottom: 48px;
+	left: 12px;
+	opacity: 0.5;
+	z-index: 10000;
+}
+
+
+
+
+/* Loader */
+#loader{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index: 10000;
+}
+
+.pulse-loader:not(:required) {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	margin-left: -50px;
+	margin-top: -50px;
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	-moz-animation: pulse-loader 0.7s linear infinite alternate;
+	-webkit-animation: pulse-loader 0.7s linear infinite alternate;
+	animation: pulse-loader 0.7s linear infinite alternate;
+	border: 2px solid #e67e22;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	overflow: hidden;
+	text-indent: 50px;
+}
+
+@-moz-keyframes pulse-loader {
+	0% {
+		-moz-box-shadow: #e67e22 0 0 0px 20px;
+		box-shadow: #e67e22 0 0 0px 20px;
+	}
+	40% {
+		-moz-box-shadow: none;
+		box-shadow: none;
+	}
+	100% {
+		-moz-box-shadow: #e67e22 0 0 0px 25px inset;
+		box-shadow: #e67e22 0 0 0px 25px inset;
+	}
+}
+@-webkit-keyframes pulse-loader {
+	0% {
+		-webkit-box-shadow: #e67e22 0 0 0px 20px;
+		box-shadow: #e67e22 0 0 0px 20px;
+	}
+	40% {
+		-webkit-box-shadow: none;
+		box-shadow: none;
+	}
+	100% {
+		-webkit-box-shadow: #e67e22 0 0 0px 25px inset;
+		box-shadow: #e67e22 0 0 0px 25px inset;
+	}
+}
+@keyframes pulse-loader {
+	0% {
+		-moz-box-shadow: #e67e22 0 0 0px 20px;
+		-webkit-box-shadow: #e67e22 0 0 0px 20px;
+		box-shadow: #e67e22 0 0 0px 20px;
+	}
+	40% {
+		-moz-box-shadow: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+	}
+	100% {
+		-moz-box-shadow: #e67e22 0 0 0px 25px inset;
+		-webkit-box-shadow: #e67e22 0 0 0px 25px inset;
+		box-shadow: #e67e22 0 0 0px 25px inset;
+	}
 }
